--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>YouTube Downloader</title>
+  <title>Local Video Downloader</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
