--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,32 @@
 
     <!-- Download button -->
     <section class="card">
-        <button id="downloadBtn" class="btn" onclick="download()">
-            ⬇️ Download
+    <div style="display:flex; gap:10px; flex-wrap:wrap;">
+        <button id="downloadBtn" class="btn" onclick="download()">⬇️ Download</button>
+
+        <button
+                id="cancelBtn"
+                class="btn btn-secondary"
+                onclick="cancelDownload()"
+                style="display:none;"
+        >
+            ✖ Cancel
         </button>
-        <div class="hint">
-            💾 Saved to your Downloads folder automatically.
-        </div>
-    </section>
+
+        <!-- ✅ appears after done -->
+        <button
+                id="showBtn"
+                class="btn btn-secondary"
+                onclick="showInFolder()"
+                style="display:none;"
+        >
+            📂 Show in Folder
+        </button>
+    </div>
+
+    <div class="hint">💾 Saved to your Downloads folder automatically.</div>
+</section>
+
 
     <!-- Progress -->
     <section class="card progress-section">
@@ -70,8 +89,47 @@
         </div>
         <div id="progressText" class="hint"></div>
     </section>
+
+
 </div>
 
 <script src="app.js"></script>
+<!-- ADD THIS BEFORE </body> IN HTML -->
+<footer class="footer">
+    <div class="footer-left">
+        <span class="footer-made">Developed by</span>
+        <span class="footer-name">Sishan Hewapathirana</span>
+    </div>
+    <div class="footer-links">
+        <a class="footer-link" href="https://github.com/sishanhewa" target="_blank" rel="noreferrer">
+      <span class="footer-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12 .5C5.73.5.5 5.74.5 12.02c0 5.1 3.3 9.43 7.88 10.96.58.1.79-.25.79-.56v-2.06c-3.2.7-3.88-1.54-3.88-1.54-.53-1.35-1.3-1.72-1.3-1.72-1.06-.73.08-.72.08-.72 1.17.09 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.57-2.56-.29-5.25-1.28-5.25-5.7 0-1.26.45-2.3 1.2-3.11-.12-.3-.52-1.5.11-3.11 0 0 .98-.31 3.2 1.19.93-.26 1.93-.39 2.93-.39s2 .13 2.93.39c2.22-1.5 3.2-1.19 3.2-1.19.63 1.61.23 2.81.11 3.11.75.81 1.2 1.85 1.2 3.11 0 4.43-2.7 5.4-5.28 5.69.41.36.78 1.07.78 2.16v3.2c0 .31.21.67.8.56 4.58-1.53 7.87-5.86 7.87-10.96C23.5 5.74 18.27.5 12 .5z"/>
+        </svg>
+      </span>
+            <span>GitHub</span>
+        </a>
+        <a class="footer-link" href="https://instagram.com/sishan.a" target="_blank" rel="noreferrer">
+      <span class="footer-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="currentColor">
+          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5z"/>
+          <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7z"/>
+          <circle cx="17.2" cy="6.8" r="1.2"/>
+        </svg>
+      </span>
+            <span>Instagram</span>
+        </a>
+        <a class="footer-link" href="mailto:sishanhewapathirana@gmail.com">
+      <span class="footer-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="currentColor">
+          <path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm0 2v.01L12 12l8-5.99V6H4zm16 12V8.24l-7.4 5.55a1 1 0 0 1-1.2 0L4 8.24V18h16z"/>
+        </svg>
+      </span>
+            <span>Email</span>
+        </a>
+    </div>
+</footer>
+
+
 </body>
 </html>
