Update app Name

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,10 @@
 
 <div class="container">
     <header class="header">
-        <h1>Local Video Downloader</h1>
+        <h1 class="brand-title">
+            <span class="brand-main">VidWerk</span>
+            <span class="brand-sub">Local Video Downloader</span>
+        </h1>
         <p class="subtitle">
             Securely extract media to your local device in high fidelity.
         </p>
